--- a/themes/custom/entyviohcp/templates/content/node--homepage--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--homepage--full.html.twig
@@ -67,8 +67,92 @@
  *
  */
 #}
-  <div class="page-content homepage-content" style="margin-top: 2000px">
+  <div data-page-id="Home" class="page-content homepage-content" style="margin-top: 2000px">
     <div class="article homepage-article">
+      <div id="indication_bar" class="close">
+        <div>
+          <div class="section">
+            <h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <article class="first-line-biologic">
+          <div>
+            <h2><strong>More UC and CD patients start on Entyvio than any other biologic<sup>8</sup>*</strong></h2>
+            <div class="legal">
+              <p class="legal">*Based on an analysis of data in SHA database comparing quarterly UC and CD combined patient counts from January 2019 to May 2021 with “new start” defined as “bio-naïve” plus “switch” patients. “Bio-naïve” is defined as any patient with UC or CD who had no UC or CD biologic drug claims for the past 3 years. “Switch” is defined as any patient who previously used a different UC or CD biologic drug and switched to the current therapy in the past 3&nbsp;years. </p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div id="home_title">
+        <article>
+          <div>
+            <h2><span>Only <span>Entyvio <em>(vedolizumab)</em></span> Combines</span></h2>
+          </div>
+        </article>
+      </div>
+      <div id="cta">
+        <article>
+          <div>
+            <section class="head-to-head">
+              <div class="varsity-trial">
+                  <img class="" src="{{ base_path ~ directory }}/images/logo-varsity-trial.png" alt="Varsity Trial">
+              </div>
+              <h2>
+                <span class="knockout-29">
+                  ONLY ENTYVIO OFFERS RESULTS FROM THE
+                </span>
+                <span class="knockout-49">
+                  first head-to-<br>head study
+                </span>
+                <span class="knockout-29 subhead">
+                  of biologics in moderate to <span data-nobr="all">severe UC<sup>14-16</sup></span>
+                </span>
+              </h2>
+              <article class="entyvio-vs-humira">
+                <h3>Entyvio <em>(vedolizumab)</em></h3>
+                <div><p data-yellow-dot-word="">Vs</p></div>
+                <h3>Humira<span class="superscript-set"><sup>®‡</sup></span> <em>(adalimumab)</em></h3>
+              </article>
+              <p class="legal"><span><sup>‡</sup></span>Humira<sup>®</sup> (AbbVie Inc., North Chicago, IL). For information related to Humira, please see AbbVie.com.</p>
+              <p class="btn-wrapper"><a class="btn btn-secondary" href="/clinical-efficacy/ulcerative-colitis/varsity-trial" target="_self">See the study results</a></p>
+            </section>
+          </div>
+          <div>
+            <section class="milestones">
+              <h2>Reaching new milestones</h2>
+              <div class="milestones-banner">
+                <img class="" src="{{ base_path ~ directory }}/images/new-milestones-banner.png" alt="Over 215,000 UC and CD patients in the US since the approval of Entyvio®.">
+              </div>
+              <div class="icon-list">
+                <div class="icon-item">
+                  <img src="{{ base_path ~ directory }}/images/29k_icon.png" alt="29,000 physicians.">
+                  <p>
+                    <span>over 29k physicians have prescribed entyvio</span><br>
+                    in the US since approval<sup>18§</sup>
+                  </p>
+                </div>
+                <div class="icon-item">
+                  <img src="{{ base_path ~ directory }}/images/89_icon.png" alt="89% of commercially insured patients have first-line biologic unrestricted commercial coverage.">
+                  <p>
+                    <span>89% of commercially insured patients</span><br>
+                    have first-line biologic unrestricted commercial coverage for Entyvio<sup>19‖</sup>
+                  </p>
+                </div>
+              </div>
+              <a class="btn btn-primary" href="/local-coverage" target="_self">Check Coverage</a>
+              <div class="legal">
+                  <p class="legal"><sup>§</sup>This information is derived from a Symphony database of Entyvio medical and pharmacy claims from June 2014 to preliminary April 2021.</p>
+                  <p class="legal"><sup>||</sup>First-line/unrestricted coverage refers to patients with no prior biologic use. Data regarding current first-line/unrestricted commercial coverage for Entyvio are derived from Managed Markets Insights &amp; Technology (MMIT) as of July 2021.</p>
+              </div>
+            </section>
+          </div>
+        </article>
+      </div>
+
       <div id="isi">
         <aside class="section">
           <article>
