--- a/themes/custom/entyviohcp/templates/content/node--gemini-i-entyvio-vs-placebo--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--gemini-i-entyvio-vs-placebo--full.html.twig
@@ -1,5 +1,5 @@
 <div data-page-id="GeminiTrial" data-page-category="ClinicalEfficacy" class="page-content gemini-trial-content" >
-  <div id="body" class="article gemini-trial-article">
+  <div id="bodyy" class="article gemini-trial-article">
     <div id="hero">
       <div>
         <picture>
